# simple_crud_app

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py  models.py  routes.py
argocd/: app-of-apps.yaml
argocd/apps/: cnpg-cluster.yaml  cnpg-operator.yaml  crud-app.yaml  istio.yaml  loki.yaml  monitoring-stack.yaml
helm/cnpg-cluster/: Chart.yaml  values.yaml
helm/cnpg-cluster/templates/: _helpers.tpl  cluster.yaml  podmonitor.yaml
helm/docs/: README.md
helm/docs/cnpg-cluster/: chart-yaml.md  cluster-yaml.md  helpers-tpl.md  podmonitor-yaml.md  values-yaml.md
helm/docs/simple-crud-app/: chart-yaml.md  deployment-yaml.md  gateway-yaml.md  grafana-dashboard-yaml.md  helpers-tpl.md  hpa-yaml.md  ingress-yaml.md  loki-datasource-yaml.md  service-yaml.md  servicemonitor-yaml.md  values-monitoring-yaml.md  values-yaml.md  virtualservice-yaml.md
helm/simple-crud-app/: Chart.yaml  test.yaml  values-monitoring.yaml  values.yaml
helm/simple-crud-app/templates/: _helpers.tpl  cnpg-cluster.yaml  deployment.yaml  gateway.yaml  grafana-dashboard.yaml  hpa.yaml  ingress.yaml  loki-datasource.yaml  service.yaml  servicemonitor.yaml  virtualservice.yaml
